--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,10 +14,24 @@
     href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"
     rel="stylesheet">
   <!-- Stylesheet -->
-  <link href="/style.css" rel="stylesheet" />
+  <link href="/starter-code/style.css" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- 
+    <div class="container">
+      <div class="strip light-strip"></div>
+      <div class="strip light-strip"></div>
+      <div class="strip light-strip"></div>
+      <div class="strip light-strip"></div>
+    </div>
+
+    <main>
+      <h1>Hello, Striped Background!</h1>
+    </main> -->
+
+
+
   <main>
     <section class="section-00">
       <svg width="119" height="28" xmlns="http://www.w3.org/2000/svg">
