--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,10 +45,10 @@
             fill="#28283D" fill-rule="nonzero" />
         </g>
       </svg>
-      <img src="/starter-code/assets/tablet/image-hero.png" alt="">
+      <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt="">
       <h1>Group Chat for Everyone</h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-      <button>Download v1.3</button>
+      <button class="btn-00">Download <span>v1.3</span></button>
       <button>What is it?</button>
     </section>
     <section class="section-01">
