--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,18 +18,13 @@
 </head>
 
 <body>
-  <!-- 
-    <div class="container">
-      <div class="strip light-strip"></div>
-      <div class="strip light-strip"></div>
-      <div class="strip light-strip"></div>
-      <div class="strip light-strip"></div>
-    </div>
 
-    <main>
-      <h1>Hello, Striped Background!</h1>
-    </main> -->
-
+  <!-- <div class="background-stripes">
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+    <div class="stripe"></div>
+  </div>    -->
 
 
   <main>
@@ -48,42 +43,31 @@
       <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt="">
       <h1>Group Chat for Everyone</h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-      <button class="btn-00">Download <span>v1.3</span></button>
-      <button>What is it?</button>
+      <button class="btn">Download <span>v1.3</span></button>
+      <button class="btn-2">What is it?</button>
     </section>
     <section class="section-01">
-      <span>01</span>
-      <p>Grid Image here</p>
+      <div class="verticalLine"></div>
+      <div class="circle"><span>01</span></div>
+      <div class="image-grid">
+        <div class="box a"></div>
+        <div class="box b"></div>
+        <div class="box c"></div>
+        <div class="box d"></div>
+      </div>
       <p>BUILT FOR MODERN USE</p>
       <h2>Smarter meetings, all in one place</h2>
       <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can
         join with invite-only team access, data encryption, and data export.</p>
     </section>
     <section class="section-02">
-      <span>02</span>
+      <div class="verticalLine-2"></div>
+      <div class="circle-2"><span>02</span></div>
       <h2>Experience more together</h2>
       <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <button>Download v1.3</button>
+      <button class="btn-3">Download v1.3</button>
     </section>
   </main>
-  <!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
-
-  Download v1.3
-  What is it?
-
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3 -->
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
