circle-2 & verticleLine-2 complete

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -61,11 +61,14 @@
         join with invite-only team access, data encryption, and data export.</p>
     </section>
     <section class="section-02">
+      <div class="background-overlay"></div>
       <div class="verticalLine-2"></div>
       <div class="circle-2"><span>02</span></div>
-      <h2>Experience more together</h2>
-      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <button class="btn-3">Download v1.3</button>
+      <div class="content">
+        <h2>Experience more together</h2>
+        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <button class="btn-3">Download v1.3</button>
+      </div>
     </section>
   </main>
   <footer>
