--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,8 +43,10 @@
       <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt="">
       <h1>Group Chat for Everyone</h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-      <button class="btn">Download <span>v1.3</span></button>
-      <button class="btn-2">What is it?</button>
+      <div class="btn-container">
+        <button class="btn">Download <span>v1.3</span></button>
+        <button class="btn-2">What is it?</button>
+      </div>
     </section>
     <section class="section-01">
       <div class="verticalLine"></div>
