--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,7 +27,8 @@
             fill="#28283D" fill-rule="nonzero" />
         </g>
       </svg>
-      <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt="">
+      <div class="hero" alt="Image of people"></div>
+      <!-- <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt=""> -->
       <h1>Group Chat for Everyone</h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
       <div class="btn-container">
