desktop size progress

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,7 +27,10 @@
             fill="#28283D" fill-rule="nonzero" />
         </g>
       </svg>
-      <div class="hero" alt="Image of people"></div>
+      <div class="mobile-hero"></div>
+      <div class="tablet-hero"></div>
+      <div class="desktop-hero left"></div>
+      <div class="desktop-hero right"></div>
       <!-- <img class="hero" src="/starter-code/assets/tablet/image-hero.png" alt=""> -->
       <h1>Group Chat for Everyone</h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
