--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Meet landing page</title>
 
   <!-- Stylesheet -->
-  <link href="/starter-code/style.css" rel="stylesheet" />
+  <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
